--- a/.editorconfig
+++ b/.editorconfig
@@ -15,5 +15,9 @@ trim_trailing_whitespace = false
 indent_size = 2
 
 [*.{js,html,blade.php,css,scss}]
-indent_style = tab
+indent_style = space
+indent_size = 2
+
+[*.{js,html,blade.php,css,scss}]
+indent_style = space
 indent_size = 2
