--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "algolia/algoliasearch-client-php": "^2.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/horizon": "~3.1",
+        "laravel/scout": "^8.0",
         "laravel/tinker": "^2.0",
         "league/csv": "^9.6",
         "league/html-to-markdown": "^4.9",
-        "mews/captcha": "~3.0"
+        "mews/captcha": "~3.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.2",
